--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyek Web</title>
 </head>
 <body>
-    <h1>Hello Words</h1>
+    <h1>Hello Word</h1>
+    <h2>Proyek Web</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
 </body>
 </html>
