--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <h1>Hello Word</h1>
     <h2>Proyek Web</h2>
     <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
+    <h2>Widya Mustika Sari ❤️ Mikael Blonde</h2>
 </body>
 </html>
